# ChangeLog for app-arch/tar
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/tar/ChangeLog,v 1.132 2008/04/14 18:34:27 vapier Exp $

*tar-1.20 (14 Apr 2008)

  14 Apr 2008; Mike Frysinger <vapier@gentoo.org> +tar-1.20.ebuild:
  Version bump.

  27 Feb 2008; Santiago M. Mola <coldwind@gentoo.org> tar-1.19-r1.ebuild:
  amd64 stable wrt bug #211101

  22 Feb 2008; Tobias Scherbaum <dertobi123@gentoo.org> tar-1.19-r1.ebuild:
  ppc stable, bug #211101

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> tar-1.19-r1.ebuild:
  Stable on ppc64

  17 Jan 2008; Jeroen Roovers <jer@gentoo.org> tar-1.19-r1.ebuild:
  Stable for HPPA too.

  16 Jan 2008; Raúl Porcel <armin76@gentoo.org> tar-1.19-r1.ebuild:
  alpha/ia64/sparc/x86 stable

  14 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org> tar-1.19.ebuild:
  ppc. stable

*tar-1.19-r1 (10 Dec 2007)

  10 Dec 2007; Mike Frysinger <vapier@gentoo.org>
  +files/tar-1.19-update-flag.patch, +tar-1.19-r1.ebuild:
  Fix from upstream for an update regression #200315 by Billy DeVincentis.

  01 Dec 2007; Markus Rothe <corsair@gentoo.org> tar-1.19.ebuild:
  Stable on ppc64

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> tar-1.19.ebuild:
  Stable on mips.

  18 Nov 2007; Mike Frysinger <vapier@gentoo.org>
  +files/tar-1.19-gnu-inline.patch, tar-1.19.ebuild:
  Fixes from upstream for changes in "extern inline" #198817 by Ryan Hill.

  16 Nov 2007; Samuli Suominen <drac@gentoo.org> tar-1.19.ebuild:
  amd64 stable

  10 Nov 2007; Raúl Porcel <armin76@gentoo.org> tar-1.19.ebuild:
  alpha/ia64/sparc/x86 stable

*tar-1.19 (10 Oct 2007)

  10 Oct 2007; Mike Frysinger <vapier@gentoo.org> +tar-1.19.ebuild:
  Version bump.

  29 Aug 2007; Markus Rothe <corsair@gentoo.org> tar-1.18-r2.ebuild:
  Stable on ppc64; bug #189682

  24 Aug 2007; Raúl Porcel <armin76@gentoo.org> tar-1.18-r2.ebuild:
  alpha/ia64 stable wrt security #189682
